--- a/src/main/java/com/itheima/algorithm/recursion/509. 斐波那契数.md
+++ b/src/main/java/com/itheima/algorithm/recursion/509. 斐波那契数.md
@@ -1,5 +1,40 @@
+- [1. code](#1-code)
+  - [1.1. 普通递归](#11-普通递归)
+  - [1.2. 记忆数组+递归](#12-记忆数组递归)
+  - [1.3. 动态规划](#13-动态规划)
+- [2. 题](#2-题)
+  - [2.1. 兔子](#21-兔子)
+  - [2.2. 爬楼梯](#22-爬楼梯)
 
-## 普通递归
+
+---
+## 1. code
+$$
+f(n) = 
+\begin{cases}
+0 & n=0 \\
+1 & n=1 \\
+f(n-1) + f(n-2) & n>1
+\end{cases}
+$$
+
+下面的表格列出了数列的前几项
+
+| *f*0 | *f*1 | *f*2 | *f*3 | *f*4 | *f*5 | *f*6 | *f*7 | *f*8 | *f*9 | *f*10 | *f*11 | *f*12 | *f*13 |
+| ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ----- | ----- | ----- | ----- |
+| 0    | 1    | 1    | 2    | 3    | 5    | 8    | 13   | 21   | 34   | 55    | 89    | 144   | 233   |
+
+> 递归的次数`2 * f(n+1) - 1`。
+
+> **时间复杂度**
+
+* 递归的次数也符合斐波那契规律，$2 * f(n+1)-1$
+* 时间复杂度推导过程
+  * 斐波那契通项公式 $f(n) = \frac{1}{\sqrt{5}}*({\frac{1+\sqrt{5}}{2}}^n - {\frac{1-\sqrt{5}}{2}}^n)$
+  * 简化为：$f(n) = \frac{1}{2.236}*({1.618}^n - {(-0.618)}^n)$
+  * 带入递归次数公式 $2*\frac{1}{2.236}*({1.618}^{n+1} - {(-0.618)}^{n+1})-1$
+  * 时间复杂度为 $\Theta(1.618^n)$
+### 1.1. 普通递归
 ```java
 class Solution {
     public int fib(int n) {
@@ -18,8 +53,30 @@ class Solution {
 }
 ```
 
-## 记忆数组+递归
+### 1.2. 记忆数组+递归
 
+两种方式：一种在递归外面填充边界条件，另一种在递归内作为边界条件填充数组。
+```java
+class Solution {
+    public int fib(int n) {
+        if (n <= 1) {
+            return n;
+        }
+        int[] cache = new int[n + 1];
+        Arrays.fill(cache, -1);
+        cache[0] = 0;
+        cache[1] = 1;
+        return rec(n, cache);
+    }
+
+    public int rec(int n, int[] cache) {
+        if (cache[n] == -1) {
+            cache[n] = rec(n - 1, cache) + rec(n - 2, cache);
+        }
+        return cache[n];
+    }
+}
+```
 ```java
 class Solution {
     public int fib(int n) {
@@ -43,10 +100,11 @@ class Solution {
         return cache[n];
     }
 }
-````
+```
 
-## 动态规划
+### 1.3. 动态规划
 
+动态规划，区别于递归版，就是可能会涉及无用计算。
 ```java
 class Solution {
     public int fib(int n) {
@@ -65,6 +123,33 @@ class Solution {
             cache[i] = cache[i - 1] + cache[i - 2];
         }
         return cache[n];
+    }
+}
+```
+```java
+// 递归版
+class Solution {
+    int[] dp;
+    int n;
+
+    public int fib(int n) {
+        if (n <= 1) {
+            return n;
+        }
+        this.n = n;
+        dp = new int[n + 1];
+        dp[0] = 0;
+        dp[1] = 1;
+        f(2);
+        return dp[n];
+    }
+
+    public void f(int i) {
+        if (i == n + 1) {
+            return;
+        }
+        dp[i] = dp[i - 1] + dp[i - 2];
+        f(i + 1);
     }
 }
 ```
@@ -88,3 +173,20 @@ class Solution {
     }
 }
 ```
+
+
+## 2. 题
+
+### 2.1. 兔子
+
+![alt text](../../../../../../../images/image-26.png)
+
+上个月的兔子 + 上个月成熟的兔子生的兔子 = 上个月的兔子 + 上个月成熟的兔子 = 上个月的兔子 + 上上个月的兔子。
+
+### 2.2. 爬楼梯
+
+![alt text](../../../../../../../images/image-27.png)
+
+按跳1个和跳2个到第4台阶算→2阶、3阶。
+
+因此本质上还是斐波那契数列，只是从其第二项开始f(2)
