--- a/docs/背.md
+++ b/docs/背.md
@@ -1,9 +1,7 @@
 - [1. 背](#1-背)
   - [1.1. 【二分查找】](#11-二分查找)
   - [1.2. target在两边还是中间](#12-target在两边还是中间)
-  - [1.3. 基础版和改动版的哪三个](#13-基础版和改动版的哪三个)
-  - [1.4. 基础版的复杂度](#14-基础版的复杂度)
-  - [1.5. leftmost和rightmost的标准版返回什么，找打了怎么办](#15-leftmost和rightmost的标准版返回什么找打了怎么办)
+  - [1.5. leftmost和rightmost的标准版返回什么，找到了怎么办](#15-leftmost和rightmost的标准版返回什么找到了怎么办)
   - [1.6. leftmost和rightmost的替身版返回什么、谁是大于等于小于等于](#16-leftmost和rightmost的替身版返回什么谁是大于等于小于等于)
   - [1.7. 【链表】](#17-链表)
   - [1.8. 链表的遍历条件是什么](#18-链表的遍历条件是什么)
@@ -29,11 +27,21 @@
 # 1. 背
 ## 1.1. 【二分查找】
 ## 1.2. target在两边还是中间
-## 1.3. 基础版和改动版的哪三个
-## 1.4. 基础版的复杂度
-## 1.5. leftmost和rightmost的标准版返回什么，找打了怎么办
-## 1.6. leftmost和rightmost的替身版返回什么、谁是大于等于小于等于
 
+`target < a[m] < target`
+
+## 1.5. leftmost和rightmost的标准版返回什么，找到了怎么办
+
+返回candidate. 
+
+找到了：`candidate = m`，外加继续移动
+- leftmost: 左移`j = m - 1;`
+- rightmost: 右移`i = m + 1;`
+
+## 1.6. leftmost和rightmost的替身版返回什么、谁是大于等于小于等于
+leftmost: 左移`if <=`；`return i`
+
+rightmost: `if <`, 右移`else`；`return i-1`
 ## 1.7. 【链表】
 ## 1.8. 链表的遍历条件是什么
 
