--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/206反转链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/206反转链表.md
@@ -30,17 +30,26 @@ public ListNode reverseList1(ListNode o1) {
 ## 递归
 - 找到最后一个节点`last`, 当前结点是`p`（最后一轮是倒数第一个节点）。
 - 当前结点的下一个结点指向p（不是last指向p，因为last一直是链表最后一个节点），p的指向为空。
-- 返回last而不是p，这样返回最后的尾结点（倒链表的头结点）
 ```java
 class Solution {
+    // 类的成员变量
+    ListNode last;
     public ListNode reverseList(ListNode head) {
-        if(head == null || head.next == null){  // p.next == null 最后节点
+        if(head == null || head.next == null){
             return head;
         }
-        ListNode last = reverseList(head.next);
+        f(head);
+        return last;
+    }
+
+    public void f(ListNode head){
+        if(head.next == null){
+            last = head;
+            return;
+        }
+        f(head.next);
         head.next.next = head;
         head.next = null;
-        return last;
     }
 }
 ```
