--- a/src/main/java/com/itheima/datastructure/linkedlist/链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/链表.md
@@ -23,25 +23,29 @@
 - `findNode()`不一样：单哨兵需要特别处理 index = -1，因为 for 循环的退出条件哨兵表示直接退出了。
 
 
-双指针：
+## 双指针
 - 快慢指针：同一处开始，sentinel或head
 - pre cur：pre从sentinel，cur从head
 
 ## 快慢指针
 
-1. 获取倒n：
+走多：`fast=fast.next`
+1. [获取倒n](leetcode/获取倒n.md)：
    
    从哨兵开始还是从head开始都一样，因为拉开差距的是for，用了哨兵只是多走一次while.
-2. 删除倒n：19
+2. [删除倒n](leetcode/19删除倒n.md)
    
-   那么就要获取前一个节点（加入哨兵，for中n+1拉开更大）
-3. 获取中间：876
+   那么就要获取前一个节点（加入哨兵，for中`n+1`拉多一步找到前一个节点`）
+
+
+走快：`fast=fast.next.next`
+1. [获取中间](leetcode/876链表的中间结点.md)：
    
    倒数第一及后，`fast != null && fast.next != null`；倒数第二及后，`fast.next != null && fast.next.next != null`
 
-   从head开始：不能是倒数第二及后，则中间及中间偏左。
+   从head开始：不能是倒数第二及后，则**中间及中间偏左**。
 
-   从head开始：不能是倒数第一及后，则中间及中间偏右。
+   从head开始：不能是倒数第一及后，则**中间及中间偏右**。
 
    从哨兵开始：不能是倒数第一及后，则中间及中间偏左。相当于多了一个节点，中间及中间偏右→中间偏左及中间。
 
