--- a/src/main/java/com/itheima/algorithm/dynamicprogramming/动态规划.md
+++ b/src/main/java/com/itheima/algorithm/dynamicprogramming/动态规划.md
@@ -1,3 +1,10 @@
+- [背包问题](#背包问题)
+- [分数背包](#分数背包)
+- [01背包](#01背包)
+- [完全背包](#完全背包)
+- [总结](#总结)
+
+---
 ## 背包问题
 背包问题：分数背包(贪心）、0-1背包（动态规划）、无限背包（动态规划）。
 
