--- a/src/main/java/com/itheima/algorithm/recursion/递归.md
+++ b/src/main/java/com/itheima/algorithm/recursion/递归.md
@@ -1,15 +1,15 @@
-- [1. 前后位置](#1-前后位置)
-- [2. 类的成员变量什么都可以干](#2-类的成员变量什么都可以干)
-  - [2.1. 传递不变的参数](#21-传递不变的参数)
-  - [2.2. 返回值](#22-返回值)
-- [3. 循环变递归](#3-循环变递归)
-- [4. 记忆数组](#4-记忆数组)
+- [前后位置](#前后位置)
+- [类的成员变量什么都可以干](#类的成员变量什么都可以干)
+  - [传递不变的参数](#传递不变的参数)
+  - [返回值](#返回值)
+- [循环变递归](#循环变递归)
+- [记忆数组](#记忆数组)
 - [多路递归](#多路递归)
 - [多路递归→回溯](#多路递归回溯)
 
 ---
 
-## 1. 前后位置
+## 前后位置
 ```java
 void f(Node node) {
     // 临界条件
@@ -71,12 +71,12 @@ void f(Node node = 3) {
 
 e.g. [递归反向打印字符串](leetcode.md)
 
-## 2. 类的成员变量什么都可以干
+## 类的成员变量什么都可以干
 
 类的成员变量：
 - 代替函数参数中传递不变的参数
 - 代替返回值
-### 2.1. 传递不变的参数
+### 传递不变的参数
 
 ```java
 public class Main{
@@ -115,7 +115,7 @@ public class Main{
     }
 }
 ```
-### 2.2. 返回值
+### 返回值
 
 返回值天生就是倒着的：位于递归后面————尾递归`return f()` 即`int a = f(); return a`
 
@@ -168,7 +168,7 @@ class Solution {
     }
 }
 ```
-## 3. 循环变递归
+## 循环变递归
 
 把最外层的循环拆出来。
 
@@ -181,7 +181,7 @@ class Solution {
 - `recursion(..., i, j)` -> `recursion(..., i + 1, j - 1)`
 
 
-## 4. 记忆数组
+## 记忆数组
 
 两种方式：一种在递归外面填充边界条件，另一种在递归内作为边界条件填充数组。
 
@@ -195,5 +195,40 @@ for循环展开看
 
 ## 多路递归→回溯
 
-1. 剪枝
-2. 回溯
+多路递归 + 回溯 + 剪枝
+
+
+```java
+// 回溯 
+class Solution {
+    // 保存每条从根到叶子的链路
+    LinkedList<Integer> stack = new LinkedList<>();
+    int[] nums;
+    // 所有的链路
+    List<List<Integer>> result = new ArrayList<>();
+
+    public List<List<Integer>> permute(int[] nums) {
+        this.nums = nums;
+        dfs();
+        return result;
+    }
+
+    public void dfs() {
+        if (stack.size() == nums.length) {
+            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
+            result.add(new ArrayList<>(stack));
+            return;
+        }
+
+        for (int i = 0; i < nums.length; i++) {
+            // 正向操作：放入
+            stack.push(nums[i]);
+            dfs();     // 放入，拿出 = 回溯
+            // 反向操作：拿出
+            stack.pop();
+        }
+    }
+}
+/ [1, 2, 3]
+// [[1,1,1],[2,1,1],[3,1,1],[1,2,1],[2,2,1],[3,2,1],[1,3,1],[2,3,1],[3,3,1],[1,1,2],[2,1,2],[3,1,2],[1,2,2],[2,2,2],[3,2,2],[1,3,2],[2,3,2],[3,3,2],[1,1,3],[2,1,3],[3,1,3],[1,2,3],[2,2,3],[3,2,3],[1,3,3],[2,3,3],[3,3,3]]
+```
