--- a/src/main/java/com/itheima/algorithm/recursion/排列组合.md
+++ b/src/main/java/com/itheima/algorithm/recursion/排列组合.md
@@ -1,11 +1,78 @@
+- [总结](#总结)
+- [不剪枝](#不剪枝)
 - [46. 全排列](#46-全排列)
 - [47. 全排列 II](#47-全排列-ii)
 - [77. 组合](#77-组合)
-- [216. 组合总和 III](#216-组合总和-iii)
 - [39. 组合总和](#39-组合总和)
 - [40. 组合总和 II](#40-组合总和-ii)
+- [216. 组合总和 III](#216-组合总和-iii)
 
 ---
+
+## 总结
+
+- 不剪枝；全排列 (vis)；组合和组合总和 (sort后放入更大)；
+- 组合 (剩余个数)；组合总和 (target)
+
+不剪枝
+
+![alt text](../../../../../../../images/image-71.png)
+
+全排列
+
+![alt text](../../../../../../../images/image-72.png)
+
+![alt text](../../../../../../../images/image-73.png)
+
+组合: sort后放入更大，是包含了vis `1-2-3` 和 排列的重复解 `3-2-1`
+
+![alt text](../../../../../../../images/image-74.png)
+
+组合总和
+
+![alt text](../../../../../../../images/image-75.png)
+
+![alt text](../../../../../../../images/image-76.png)
+
+## 不剪枝
+
+
+```java
+// 回溯 
+class Solution {
+    // 保存每条从根到叶子的链路
+    LinkedList<Integer> stack = new LinkedList<>();
+    int[] nums;
+    // 所有的链路
+    List<List<Integer>> result = new ArrayList<>();
+
+    public List<List<Integer>> permute(int[] nums) {
+        this.nums = nums;
+        dfs();
+        return result;
+    }
+
+    public void dfs() {
+        if (stack.size() == nums.length) {
+            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
+            result.add(new ArrayList<>(stack));
+            return;
+        }
+
+        for (int i = 0; i < nums.length; i++) {
+            // 正向操作：放入
+            stack.push(nums[i]);
+            dfs();     // 放入，拿出 = 回溯
+            // 反向操作：拿出
+            stack.pop();
+        }
+    }
+}
+/ [1, 2, 3]
+// [[1,1,1],[2,1,1],[3,1,1],[1,2,1],[2,2,1],[3,2,1],[1,3,1],[2,3,1],[3,3,1],[1,1,2],[2,1,2],[3,1,2],[1,2,2],[2,2,2],[3,2,2],[1,3,2],[2,3,2],[3,3,2],[1,1,3],[2,1,3],[3,1,3],[1,2,3],[2,2,3],[3,2,3],[1,3,3],[2,3,3],[3,3,3]]
+```
+
+
 ## 46. 全排列
 剪枝
 - 已遍历vis
@@ -145,54 +212,6 @@ class Solution {
     }
 }
 ```
-
-## 216. 组合总和 III
-- 放入更大的数：包含了已遍历vis
-- 剪枝剩余target超了的
-```java
-class Solution {
-    // 保存每条从根到叶子的链路
-    LinkedList<Integer> stack = new LinkedList<>();
-    // 所有的链路
-    List<List<Integer>> result = new ArrayList<>();
-    int k;
-    int n = 9;
-    int target;
-
-    public List<List<Integer>> combinationSum3(int k, int n) {
-        this.target = n;
-        this.k = k;
-        dfs();
-        return result;
-    }
-
-    public void dfs() {
-        // 个数且target满足
-        if (stack.size() == k && target == 0) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
-            result.add(new ArrayList<>(stack));
-            return;
-        }
-        
-        int i = 1;
-        if (!stack.isEmpty()) {
-            i = stack.peek() + 1;       // 放入更大的数：包含了已遍历vis的情况
-        }
-        for (; i <= n; i++) {
-            // 剪枝剩余target超了的
-            if (target - i < 0)
-                break;
-            
-            stack.push(i);
-            target -= i;
-            dfs();
-            target += i;
-            stack.pop();
-        }
-    }
-}
-```
-
 ## 39. 组合总和
 
 ```java
@@ -284,6 +303,55 @@ class Solution {
             dfs();
             vis[i] = false;
             target += nums[i];
+            stack.pop();
+        }
+    }
+}
+```
+
+
+
+## 216. 组合总和 III
+- 放入更大的数：包含了已遍历vis
+- 剪枝剩余target超了的
+```java
+class Solution {
+    // 保存每条从根到叶子的链路
+    LinkedList<Integer> stack = new LinkedList<>();
+    // 所有的链路
+    List<List<Integer>> result = new ArrayList<>();
+    int k;
+    int n = 9;
+    int target;
+
+    public List<List<Integer>> combinationSum3(int k, int n) {
+        this.target = n;
+        this.k = k;
+        dfs();
+        return result;
+    }
+
+    public void dfs() {
+        // 个数且target满足
+        if (stack.size() == k && target == 0) {
+            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
+            result.add(new ArrayList<>(stack));
+            return;
+        }
+        
+        int i = 1;
+        if (!stack.isEmpty()) {
+            i = stack.peek() + 1;       // 放入更大的数：包含了已遍历vis的情况
+        }
+        for (; i <= n; i++) {
+            // 剪枝剩余target超了的
+            if (target - i < 0)
+                break;
+            
+            stack.push(i);
+            target -= i;
+            dfs();
+            target += i;
             stack.pop();
         }
     }
