--- a/src/main/java/com/itheima/algorithm/recursion/递归.md
+++ b/src/main/java/com/itheima/algorithm/recursion/递归.md
@@ -69,7 +69,7 @@ void f(Node node = 3) {
 }
 ```
 
-e.g. [递归反向打印字符串](leetcode.md)
+e.g. [递归反向打印字符串](leetcode递归.md)
 
 ## 类的成员变量什么都可以干
 
@@ -195,40 +195,111 @@ for循环展开看
 
 ## 多路递归→回溯
 
-多路递归 + 回溯 + 剪枝
-
-
+标准模板：void dfs
+- 用栈保存符合的链路结果。
+- 保存结果处、剪枝处、正向操作-递归-反向操作处。
 ```java
-// 回溯 
 class Solution {
     // 保存每条从根到叶子的链路
     LinkedList<Integer> stack = new LinkedList<>();
-    int[] nums;
     // 所有的链路
     List<List<Integer>> result = new ArrayList<>();
+    // 剪枝：已遍历的节点
+    boolean[] vis;
+    int[] nums;
+
+
 
     public List<List<Integer>> permute(int[] nums) {
+        vis = new boolean[nums.length];
         this.nums = nums;
         dfs();
         return result;
     }
 
     public void dfs() {
+        // 保存结果处
         if (stack.size() == nums.length) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
             result.add(new ArrayList<>(stack));
             return;
         }
 
         for (int i = 0; i < nums.length; i++) {
-            // 正向操作：放入
+            // 剪枝处
+            if(vis[i]){
+                continue;
+            }
+            // 正向操作：放入、标记已遍历
             stack.push(nums[i]);
-            dfs();     // 放入，拿出 = 回溯
-            // 反向操作：拿出
+            vis[i] = true;
+            dfs();
+            // 反向操作：拿出、取消标记
+            vis[i] = false;
             stack.pop();
         }
     }
 }
-/ [1, 2, 3]
-// [[1,1,1],[2,1,1],[3,1,1],[1,2,1],[2,2,1],[3,2,1],[1,3,1],[2,3,1],[3,3,1],[1,1,2],[2,1,2],[3,1,2],[1,2,2],[2,2,2],[3,2,2],[1,3,2],[2,3,2],[3,3,2],[1,1,3],[2,1,3],[3,1,3],[1,2,3],[2,2,3],[3,2,3],[1,3,3],[2,3,3],[3,3,3]]
+```
+
+找到即终止：dfs返回boolean
+- 保存结果处：有符合的结果直接return true
+- 递归处：会先判断是否直接结束
+```java
+// 37. 解数独
+class Solution {
+    // 表示已经被占用
+    boolean[][] rows = new boolean[9][9];
+    boolean[][] columns = new boolean[9][9];
+    boolean[][] cells = new boolean[9][9];
+    char[][] board;
+
+    public void solveSudoku(char[][] board) {
+        for (int i = 0; i < 9; i++) {
+            for (int j = 0; j < 9; j++) {
+                char c = board[i][j];
+                if (c != '.') {
+                    rows[i][c - '1'] = columns[j][c - '1'] = cells[i / 3 * 3 + j / 3][c - '1'] = true;
+                }
+            }
+        }
+        this.board = board;
+        System.out.println(dfs(0, 0));
+        for (int i = 0; i < 9; i++) {
+            for (int j = 0; j < 9; j++) {
+                char c = board[i][j];
+                System.out.print(c);
+            }
+            System.out.println();
+        }
+    }
+
+    public boolean dfs(int i, int j) {
+        // 保存结果处：有符合的结果直接return true
+        while (board[i][j] != '.') {
+            if (++j >= 9) {
+                j = 0;
+                if (++i >= 9) {
+                    return true;
+                }
+            }
+        }
+        for (int k = 1; k <= 9; k++) {
+            // 剪枝处
+            if (rows[i][k - 1] || columns[j][k - 1] || cells[i / 3 * 3 + j / 3][k - 1]) {
+                continue;
+            }
+
+
+            rows[i][k - 1] = columns[j][k - 1] = cells[i / 3 * 3 + j / 3][k - 1] = true;
+            board[i][j] = (char) (k + '0');
+            // 递归会先判断是否直接结束
+            if(dfs(i, j)){
+                return true;
+            }      
+            board[i][j] = '.';
+            rows[i][k - 1] = columns[j][k - 1] = cells[i / 3 * 3 + j / 3][k - 1] = false;
+        }
+        return false; 
+    }
+}
 ```
