--- a/src/main/java/com/itheima/algorithm/recursion/斐波那契数.md
+++ b/src/main/java/com/itheima/algorithm/recursion/斐波那契数.md
@@ -1,14 +1,14 @@
-- [1. code](#1-code)
-  - [1.1. 普通递归](#11-普通递归)
-  - [1.2. 记忆数组+递归](#12-记忆数组递归)
-  - [1.3. 动态规划](#13-动态规划)
-- [2. 题](#2-题)
-  - [2.1. 兔子](#21-兔子)
-  - [2.2. 爬楼梯](#22-爬楼梯)
+- [509.斐波那契数列](#509斐波那契数列)
+  - [普通递归](#普通递归)
+  - [记忆数组+递归](#记忆数组递归)
+  - [动态规划](#动态规划)
+- [题](#题)
+  - [兔子](#兔子)
+  - [爬楼梯](#爬楼梯)
 
 
 ---
-## 1. code
+## 509.斐波那契数列
 $$
 f(n) = 
 \begin{cases}
@@ -34,7 +34,7 @@ $$
   * 简化为：$f(n) = \frac{1}{2.236}*({1.618}^n - {(-0.618)}^n)$
   * 带入递归次数公式 $2*\frac{1}{2.236}*({1.618}^{n+1} - {(-0.618)}^{n+1})-1$
   * 时间复杂度为 $\Theta(1.618^n)$
-### 1.1. 普通递归
+### 普通递归
 ```java
 class Solution {
     public int fib(int n) {
@@ -53,7 +53,7 @@ class Solution {
 }
 ```
 
-### 1.2. 记忆数组+递归
+### 记忆数组+递归
 
 两种方式：一种在递归外面填充边界条件，另一种在递归内作为边界条件填充数组。
 ```java
@@ -102,7 +102,7 @@ class Solution {
 }
 ```
 
-### 1.3. 动态规划
+### 动态规划
 
 动态规划，区别于递归版，就是可能会涉及无用计算。
 ```java
@@ -175,15 +175,15 @@ class Solution {
 ```
 
 
-## 2. 题
+## 题
 
-### 2.1. 兔子
+### 兔子
 
 ![alt text](../../../../../../../images/image-26.png)
 
 上个月的兔子 + 上个月成熟的兔子生的兔子 = 上个月的兔子 + 上个月成熟的兔子 = 上个月的兔子 + 上上个月的兔子。
 
-### 2.2. 爬楼梯
+### 爬楼梯
 
 ![alt text](../../../../../../../images/image-27.png)
 
