--- a/docs/平台/注意.md
+++ b/docs/平台/注意.md
@@ -1,3 +1,4 @@
-1. int * int ，会溢出。`(long) int*int`
-2. dfs 集合新对象 `result.add(new ArrayList<>(stack))`，而不是`result.add(stack)`
-3. 
+`int * int` ，会溢出。`(long) int*int`
+
+dfs 集合新对象 `result.add(new ArrayList<>(stack))`，而不是`result.add(stack)`
+
