--- a/src/main/java/com/itheima/algorithm/recursion/递归.md
+++ b/src/main/java/com/itheima/algorithm/recursion/递归.md
@@ -1,6 +1,7 @@
 - [前后位置](#前后位置)
 - [类的成员变量什么都可以干](#类的成员变量什么都可以干)
-  - [传递不变的参数](#传递不变的参数)
+  - [代替函数参数中传递不变的参数](#代替函数参数中传递不变的参数)
+  - [代替函数参数中传递需要变化的参数](#代替函数参数中传递需要变化的参数)
   - [返回值](#返回值)
 - [循环变递归](#循环变递归)
 - [记忆数组](#记忆数组)
@@ -75,10 +76,12 @@ e.g. [递归反向打印字符串](leetcode递归.md)
 
 类的成员变量：
 - 代替函数参数中传递不变的参数
+- 代替函数参数中传递需要变化的参数
 - 代替返回值
-### 传递不变的参数
 
+### 代替函数参数中传递不变的参数
 ```java
+// 普通方式传递
 public class Main{
     public static void main(){
         str = new String("abc");
@@ -94,11 +97,9 @@ public class Main{
         System.out.println(str.charAt(n));
     }
 }
-```
 
-```java
+// 类的成员变量
 public class Main{
-    // 类的成员变量
     String str;
 
     public static void main(){
@@ -114,6 +115,45 @@ public class Main{
         System.out.println(str.charAt(n));
     }
 }
+```
+
+### 代替函数参数中传递需要变化的参数
+
+用回溯来做。
+```java
+    public void dfs(int n, int i, int j, int target) {
+        if (n == 2) {
+            twoSum(i, j, target);
+            return;
+        }
+
+        for (int k = i; k < j; k++) {
+            if (k > i && nums[k] == nums[k - 1]) {
+                continue;
+            }
+            stack.push(nums[k]);
+            dfs(n - 1, k + 1, j, target - nums[k]);
+            stack.pop();
+        }
+    }
+
+    public void dfs(int n, int i, int j) {
+        if (n == 2) {
+            twoSum(i, j, target);
+            return;
+        }
+
+        for (int k = i; k < j; k++) {
+            if (k > i && nums[k] == nums[k - 1]) {
+                continue;
+            }
+            stack.push(nums[k]);
+            target = target - nums[k];      // 修改
+            dfs(n - 1, k + 1, j);
+            target = target + nums[k];      // 回溯恢复
+            stack.pop();
+        }
+    }
 ```
 ### 返回值
 
