--- a/docs/字符串/字符串匹配.md
+++ b/docs/字符串/字符串匹配.md
@@ -2,8 +2,10 @@
 - [匹配子串](#匹配子串)
   - [暴力匹配](#暴力匹配)
   - [KMP](#kmp)
+  - [重复的子字符串](#重复的子字符串)
 - [最长回文子串](#最长回文子串)
 - [最小覆盖子串](#最小覆盖子串)
+- [无重复字符的最长子串](#无重复字符的最长子串)
 
 
 ---
@@ -40,6 +42,15 @@ class Solution {
 ```
 ## 匹配子串
 ### 暴力匹配
+
+手机暴力匹配，效果等同调用 indexOf 函数
+```java
+class Solution {
+    public int strStr(String haystack, String needle) {
+        return haystack.indexOf(needle);
+    }
+}
+```
 ```java
 // 28. 找出字符串中第一个匹配项的下标
 class Solution {
@@ -50,8 +61,8 @@ class Solution {
         int i = 0, j = 0;
         while (i < c1.length && j < c2.length) {
             if (c1[i] != c2[j]) {   
-                i = i - j + 1;      // 不是直接i++
-                j = 0;
+                i = i - j + 1;      // 回退j个的下一个。不是直接i++
+                j = 0;              // 清零
             } else {
                 i++;
                 j++;
@@ -67,24 +78,53 @@ class Solution {
 ```
 ### KMP
 
+模式串自身的前后缀（不包含自身）匹配。
+
+> lps: 下标i处的值表示，i+1个字符的最长公共前缀的个数。
+
+比如，j及其前面有3个已匹配的字符，而3个已匹配的字符的最长公共前缀的个数，对应lps中就是下标2的值。
+
+前进：`lps[i] = j + 1`，回退：`j = lps[j-1]`
+
 ![alt text](../../images/image-80.png)
 
-`j = lps[j-1]`
+i和j犬牙交错，lps和i同步：
+- 第一个字符必然没有前后缀。
+- i从1开始，j从0开始。
 
-lps: 下标i处的值表示，i+1个字符的最长公共前缀的个数。
+遍历i，回退是j动i不动
 
-j前面有3个已匹配的字符，而3个已匹配的字符的最长公共前缀的个数，对应lps中就是下标2的值。
+> 匹配
+
+i和j同步，都从0开始。
 
 ```java
+// 28. 找出字符串中第一个匹配项的下标
 class Solution {
     public int strStr(String haystack, String needle) {
         char[] origin = haystack.toCharArray();
         char[] pattern = needle.toCharArray();
-        int[] lps = lps(pattern);
+        int[] lps = new int[pattern.length];
 
-        int i = 0, j = 0;
-        // while (i < origin.length) {
-        while (pattern.length - j <= origin.length - i) {   // pattern剩余未匹配的要小于等于origin剩余未匹配的
+        int i = 1, j = 0;
+        while (i < pattern.length) {
+            if (pattern[i] == pattern[j]) {
+                lps[i] = j + 1;
+                i++;
+                j++;
+            } else {
+                if (j == 0) {   // j已经是0了，不能再退，直接i++
+                    i++;
+                } else {
+                    j = lps[j - 1];
+                }
+            }
+        }
+
+        i = 0;
+        j = 0;
+        // while (pattern.length - j <= origin.length - i) {   // pattern剩余未匹配的要小于等于origin剩余未匹配的。没必要，ms都看不出来
+        while (i < origin.length) {
             if (origin[i] == pattern[j]) {
                 i++;
                 j++;
@@ -95,30 +135,86 @@ class Solution {
                     j = lps[j - 1];
                 }
             }
+            // 匹配完所有模式串字符
             if (j == pattern.length) {
                 return i - j;
             }
         }
         return -1;
     }
+}
+```
 
-    public int[] lps(char[] pattern) {
+### 重复的子字符串
+
+观察特性：
+
+我们可以把字符串 s 写成 $s's'\cdots s'$ 的形式，$s'$就是重复子串。
+
+如果我们移除字符串 s 的前n'个字符(一个完整的 $s'$)，再将这些字符保持顺序添加到剩余字符串的末尾，那么得到的字符串仍然是 s。
+
+那么如果将两个 s 连在一起（相当于s的头尾拼接了），并移除第一个和最后一个字符（不让它匹配首个和最后的重复字符串），那么得到的字符串一定包含 s，即**s 是它的一个子串**。
+
+> 最简单：
+
+```java
+// 459. 重复的子字符串
+class Solution {
+    public boolean repeatedSubstringPattern(String s) {
+        String str = s + s;
+        // return str.indexOf(s, 1) != s.length();
+        return str.substring(1, str.length() - 1).contains(s);
+    }
+}
+```
+
+> 用KMP来写 contains()
+
+```java
+// 459. 重复的子字符串
+class Solution {
+    public boolean repeatedSubstringPattern(String s) {
+        return kmp(s + s, s);
+    }
+
+    public boolean kmp(String s1, String s2) {
+        char[] origin = s1.toCharArray();
+        char[] pattern = s2.toCharArray();
         int[] lps = new int[pattern.length];
+
         int i = 1, j = 0;
-        while (i < pattern.length) {
-            if (pattern[i] == pattern[j]) {
+        while(i<pattern.length){
+            if(pattern[i] == pattern[j]){
                 lps[i] = j + 1;
                 i++;
                 j++;
-            } else {
-                if (j == 0) {
+            } else{
+                if(j == 0){
                     i++;
-                } else {
+                }else{
                     j = lps[j - 1];
                 }
             }
         }
-        return lps;
+
+        i = 1;      // 去掉头部
+        j = 0;
+        while(i < origin.length - 1){       // 去掉尾部
+            if(origin[i] == pattern[j]){
+                i++;
+                j++;
+            } else{
+                if(j == 0){
+                    i++;
+                }else{
+                    j = lps[j - 1];
+                }
+            }
+            if(j == pattern.length){
+                return true;
+            }
+        }
+        return false;
     }
 }
 ```
@@ -218,6 +314,58 @@ class Solution {
         }
 
         return flag ? new String(cs, left, right - left + 1) : "";
+    }
+}
+```
+
+## 无重复字符的最长子串
+
+滑动窗口，`[b, i]` 为不重复子串。
+```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        char[] cs = s.toCharArray();
+        int max = 0;
+        // [b, i] 即为不重复子串
+        int b = 0;      // 滑动窗口左边界，不重复子串的索引起始处
+        HashMap<Character, Integer> map = new HashMap<>();   // 存字符的最新位置。
+        for (int i = 0; i < cs.length; i++) {
+            char c = cs[i];
+            // 如果没存，那存。如果存了，就更新b的位置
+            // 注意更新是：大了才更新，因为可能当前字符是老字符，已经被包含了。
+            // "abba"，到第二个b时，b是1 + 1 = 2；到第二个a时，0+1=1，不该更新。
+            Integer pos = map.get(c);
+            if (pos != null) {
+                b = Math.max(pos + 1, b);
+            }
+            map.put(c, i);
+            max = Math.max(max, i - b + 1);
+        }
+        return max;
+    }
+}
+```
+
+```java
+// 3. 无重复字符的最长子串
+// 2ms
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        char[] cs = s.toCharArray();
+        int max = 0;
+        int b = 0;      // 滑动窗口左边界
+        int[] map = new int[200];    // HashSet
+        Arrays.fill(map, -1);   
+        for (int i = 0; i < cs.length; i++) {
+            char c = cs[i];
+            int c_index = c;
+            if (map[c_index] != -1) {
+                b = Math.max(map[c_index] + 1, b);
+            }
+            map[c_index] = i;
+            max = Math.max(max, i - b + 1);
+        }
+        return max;
     }
 }
 ```
