--- a/src/main/java/com/itheima/algorithm/dynamicprogramming/leetcode/股票.md
+++ b/src/main/java/com/itheima/algorithm/dynamicprogramming/leetcode/股票.md
@@ -10,16 +10,35 @@
 ## 一次
 
 误区：最大值-最小值，顺序是会颠倒的！
+
 ```java
+// 121. 买卖股票的最佳时机
 class Solution {
     public int maxProfit(int[] prices) {
-        int i = 0;
-        int profit = 0;
+        int profit = 0; // 最差一次都不卖
+        int i = 0;  // 第1天买入
+        // 从第二天开始
         for(int j = 1; j < prices.length; j++){
             profit = Math.max(profit, prices[j] - prices[i]);
+            // 选择最低价格的那天买入
             if(prices[j] < prices[i]){
                 i = j;
             }
+        }
+        return profit;
+    }
+}
+```
+```java
+// 121. 买卖股票的最佳时机
+class Solution {
+    public int maxProfit(int[] prices) {
+        int profit = 0;
+        int minPrice = prices[0];
+        // 从第二天开始也行，因为第一天 profit, minPrice 维持原值
+        for(int price: prices){
+            profit = Math.max(profit, price - minPrice);
+            minPrice = Math.min(price, minPrice);
         }
         return profit;
     }
@@ -29,6 +48,7 @@ class Solution {
 ## 两次
 ![alt text](../../../../../../../../images/image-85.png)
 ```java
+// 123. 买卖股票的最佳时机 III
 class Solution {
     public int maxProfit(int[] prices) {
         int buy1 = -prices[0];
@@ -50,6 +70,7 @@ class Solution {
 
 ![alt text](../../../../../../../../images/image-86.png)
 ```java
+// 188. 买卖股票的最佳时机 IV
 class Solution {
     public int maxProfit(int k, int[] prices) {
         int[] buy = new int[k];
