--- a/docs/字符串/字符串匹配.md
+++ b/docs/字符串/字符串匹配.md
@@ -259,6 +259,10 @@ class Solution {
 
 ## 最小覆盖子串
 
+字典统计：确定覆盖子串
+
+一旦覆盖：缩小i
+
 ```java
 // 76.最小覆盖子串
 class Solution {
@@ -267,26 +271,28 @@ class Solution {
     int right;
 
     public String minWindow(String s, String t) {
-        int[] scount = new int[128];
-        int[] tcount = new int[128];
-
         char[] cs = s.toCharArray();
         char[] ct = t.toCharArray();
 
+        // 字符字典，统计不同字符的个数
+        int[] scount = new int[128];
+        int[] tcount = new int[128];
+
+        // 有几种字符是存在的
         int condition = 0;
 
         for (char c : ct) {
             tcount[c]++;
         }
-        for (int c : tcount) {
-            if (c > 0)
+        for (int tc : tcount) {
+            if (tc > 0)
                 condition++;
         }
+
         int i = 0;
-        int j = 0;
         int tempCondition = 0;
-        // 遍历j
-        while (j < cs.length) {
+        // 遍历 s 字符串
+        for(int j = 0; j < cs.length; j++){
             char cj = cs[j];
             scount[cj]++;
             if (scount[cj] == tcount[cj]) {
@@ -294,14 +300,17 @@ class Solution {
             }
             // 缩小i：条件满足且i不超过j
             while (condition == tempCondition && i <= j) {
+                // 判断当前 [i...j] 部分
+                // 第一次
                 if (!flag) {
                     left = i;
                     right = j;
                     flag = true;
-                } else if (right - left > j - i) {
+                } else if (j - i < right - left) {
                     left = i;
                     right = j;
                 }
+                // 更新i
                 char ci = cs[i];
                 scount[ci]--;
                 if (scount[ci] < tcount[ci]) {
@@ -309,9 +318,7 @@ class Solution {
                 }
                 i++;
             }
-            j++;
         }
-
         return flag ? new String(cs, left, right - left + 1) : "";
     }
 }
