--- a/docs/leetcode100/11.盛最多水的容器.md
+++ b/docs/leetcode100/11.盛最多水的容器.md
@@ -34,7 +34,7 @@ class Solution {
 
 ## 42.接雨水
 
-![alt text](../../../../../../images/image-79.png)
+![alt text](../../images/image-79.png)
 
 单调栈。新元素入栈，需要弹出小于它的老元素。
 
