--- a/docs/leetcode100/189.轮转数组.md
+++ b/docs/leetcode100/189.轮转数组.md
@@ -1,6 +1,7 @@
 
 `k = k % nums.length;` 重要优化
 
+## 额外数组
 ```java
 // 189. 轮转数组
 class Solution {
@@ -13,6 +14,7 @@ class Solution {
     }
 }
 ```
+## 反转
 ![alt text](../../images/image-88.png)
 ```java
 // 189. 轮转数组
@@ -35,18 +37,33 @@ class Solution {
     }
 }
 ```
+## 环状替换
 
+![alt text](../../images/image-89.png)
 ```java
 class Solution {
     public void rotate(int[] nums, int k) {
-        k = k % nums.length;
-        int count = gcd(k, nums.length);
-        
+        int n = nums.length;
+        k = k % n;
+        int patch = gcd(n, k);
+        int b = n / patch;
+        for(int i = 0; i < patch; i++){
+            int start = i;
+            int pre = nums[start];
+            for(int j = 0; j < b; j++){
+                int nextStart = (start + k) % n;
+                int temp = nums[nextStart];
+                nums[nextStart] = pre;
+                start = nextStart;
+                pre = temp;
+            }
+        }
     }
 
+    // 最大约数
     // (6, 4); (4, 6) 第一轮会变成(6, 4)
     public int gcd(int x, int y){
-        return y > 0? gcd(y, x%y): x;
+        return y > 0 ? gcd(y, x%y): x;
     }
 }
 ```
